--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 		"strictPropertyInitialization": false,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
+		"noUncheckedIndexedAccess": true,
 		"sourceMap": true,
 		//"strict": true
 	}
