--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
 		"axios": "^1.7.9",
 		"chart.js": "^4.4.7",
 		"openapi-fetch": "^0.13.4",
-		"query-string": "^9.1.1",
-		"svelte-chartjs": "^3.1.5"
+		"query-string": "^9.1.1"
 	},
 	"exports": {
 		"./package.json": "./package.json",
